[project]
name = "computeruse"
version = "0.0.1"
description = "Computer Use Cloud — pre-configured cloud sandboxes for Claude, GPT, and Gemini Computer Use agents. Preview release."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Computer Use Cloud", email = "hello@computeruse.run" },
]
keywords = [
    "computer use",
    "computer-use",
    "ai agent",
    "claude",
    "anthropic",
    "claude computer use",
    "openai",
    "openai operator",
    "gemini",
    "agentic browser",
    "browser automation",
    "browserbase alternative",
    "e2b alternative",
    "sandbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://computeruse.run/"
Documentation = "https://computeruse.run/"
Repository = "https://github.com/computeruse-dev/sdk"
"vs Browserbase" = "https://computeruse.run/vs/browserbase.html"
Waitlist = "https://computeruse.run/#signup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["computeruse"]
